--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ECommerce</title>
+    <title>EMag</title>
 
     {% block head_style %}
     <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="{% static 'home/style.css' %}">
+    
     {% endblock head_style %}
     
     {% block head_js %}
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    
     {% endblock head_js %}
 </head>
 <body>
@@ -29,16 +32,31 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">ECommerce</a>
-            </div>
+                <a class="navbar-brand" href="/"><img src="{% static 'home/images/emag.png' %}" width="100px" ></img></a>
+            
+        </div>
+                
             <div id="navbar" class="navbar-collapse collapse">
+
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <div class="search_box_nav">
+                            <form method= "get" class="navbar-form" role="search" action="{% url 'search' %}">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search" name="query">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+                            </form>
+                            </div> 
+                    </li>
                     {% if user.is_authenticated %}
                         <li><a href="{% url 'profile' %}"><i class="fa fa-user"></i> Profile</a></li>
-                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                        <li><a href="{% url 'logout' %}?next={{ request.path }}"><i class="fa fa-sign-out"></i> Log Out</a></li>
                     {%  else %}
                         <li><a href="{% url 'register' %}"><i class="fa fa-user-plus"></i> Register</a></li>
-                        <li><a href="{% url 'login' %}"><i class="fa fa-sign-in"></i> Log In</a></li>
+                        <li><a href="{% url 'login' %}?next={{ request.path }}"><i class="fa fa-sign-in"></i> Log In</a></li>
                     {% endif %}
                     <li><a href="{% url 'view_cart' %}"><i class="fa fa-shopping-cart"></i> Cart                        
                         <label class="badge badge-light">{{ items_in_cart }}</label></a>
@@ -47,6 +65,17 @@
             </div>
         </div>
     </nav>
+    
+    {% if messages %}
+        <div class="alert alert-success">
+            <div class="messages">
+                {% for message in messages %}
+                    {{ message }}
+                {% endfor %}
+            </div>
+        </div>
+    {% endif %}
+    
     <div class="container">
         {% block content %} {% endblock %}
     </div>
